Update: Inserimento di un Nuovo Giocatore nel Database

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -4,3 +4,9 @@ NotBlank.credentials.username=Lo Username è un campo obbligatorio
 NotBlank.credentials.password=La Password è un campo obbligatorio
 duplicato.credentials.username=Questo Username non è disponibile
 #
+NotBlank.giocatore.nome=Il Nome è un campo obbligatorio
+NotBlank.giocatore.cognome=Il Cognome è un campo obbligatorio
+NotBlank.giocatore.nazionalita=La Nazionalità è un campo obbligatorio
+NotBlank.giocatore.dataNascita=La Data di Nascita è un campo obbligatorio
+giocatore.duplicato=Questo Giocatore esiste già nel Database
+#
