--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -10,3 +10,15 @@ NotBlank.giocatore.nazionalita=La Nazionalità è un campo obbligatorio
 NotBlank.giocatore.dataNascita=La Data di Nascita è un campo obbligatorio
 giocatore.duplicato=Questo Giocatore esiste già nel Database
 #
+NotBlank.squadra.nome=Il Nome è un campo obbligatorio
+squadra.duplicato=Questa Squadra esiste già nel Database
+#
+NotBlank.prestazione.data=La Data è un campo obbligatorio
+NotBlank.prestazione.squadraAvversaria=La Squadra avversaria è un campo obbligatorio
+NotBlank.prestazione.minutiGiocati=I minuti giocati sono un campo obbligatorio
+NotBlank.prestazione.golSegnati=I gol segnati sono un campo obbligatorio
+NotBlank.prestazione.assist=Gli assist sono un campo obbligatorio
+NotBlank.prestazione.ammonizioni=Le ammonizioni sono un campo obbligatorio
+NotBlank.prestazione.espulsione=L'espulsione è un campo obbligatorio
+NotBlank.prestazione.portaInviolata=La porta inviolata è un campo obbligatorio
+prestazione.duplicato=Questa Prestazione esiste già nel Database
