--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -8,9 +8,15 @@ NotBlank.giocatore.nome=Il Nome è un campo obbligatorio
 NotBlank.giocatore.cognome=Il Cognome è un campo obbligatorio
 NotBlank.giocatore.nazionalita=La Nazionalità è un campo obbligatorio
 NotBlank.giocatore.dataNascita=La Data di Nascita è un campo obbligatorio
+typeMismatch.giocatore.nome=Deve essere una stringa
+typeMismatch.java.lang.String=Deve essere una stringa
+typeMismatch.giocatore.cognome=Deve essere una stringa
+typeMismatch.giocatore.nazionalita=Deve essere una stringa
+typeMismatch.giocatore.dataNascita=Deve essere una stringa
 giocatore.duplicato=Questo Giocatore esiste già nel Database
 #
 NotBlank.squadra.nome=Il Nome è un campo obbligatorio
+typeMismatch.squadra.nome=Deve essere una stringa
 squadra.duplicato=Questa Squadra esiste già nel Database
 #
 NotBlank.prestazione.data=La Data è un campo obbligatorio
@@ -21,4 +27,12 @@ NotBlank.prestazione.assist=Gli assist sono un campo obbligatorio
 NotBlank.prestazione.ammonizioni=Le ammonizioni sono un campo obbligatorio
 NotBlank.prestazione.espulsione=L'espulsione è un campo obbligatorio
 NotBlank.prestazione.portaInviolata=La porta inviolata è un campo obbligatorio
+typeMismatch.prestazione.data=Deve essere una stringa
+typeMismatch.prestazione.squadraAvversaria=Deve essere una Squadra
+typeMismatch.prestazione.minutiGiocati=Deve essere un intero (> 0)
+typeMismatch.prestazione.golSegnati=Deve essere un intero (>= 0)
+typeMismatch.prestazione.assist=Deve essere un intero (>= 0)
+typeMismatch.prestazione.ammonizioni=DDeve essere un intero (>= 0)
+typeMismatch.prestazione.espulsione=Deve essere un intero (>= 0)
+typeMismatch.prestazione.portaInviolata=Deve essere un intero (>= 0)
 prestazione.duplicato=Questa Prestazione esiste già nel Database
