Bug Fixing: Errori di Inserimento per Prestazione e Squadra (da ultimare)

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -20,19 +20,10 @@ typeMismatch.squadra.nome=Deve essere una stringa
 squadra.duplicato=Questa Squadra esiste già nel Database
 #
 NotBlank.prestazione.data=La Data è un campo obbligatorio
-NotBlank.prestazione.squadraAvversaria=La Squadra avversaria è un campo obbligatorio
-NotBlank.prestazione.minutiGiocati=I minuti giocati sono un campo obbligatorio
-NotBlank.prestazione.golSegnati=I gol segnati sono un campo obbligatorio
-NotBlank.prestazione.assist=Gli assist sono un campo obbligatorio
-NotBlank.prestazione.ammonizioni=Le ammonizioni sono un campo obbligatorio
-NotBlank.prestazione.espulsione=L'espulsione è un campo obbligatorio
-NotBlank.prestazione.portaInviolata=La porta inviolata è un campo obbligatorio
-typeMismatch.prestazione.data=Deve essere una stringa
-typeMismatch.prestazione.squadraAvversaria=Deve essere una Squadra
-typeMismatch.prestazione.minutiGiocati=Deve essere un intero (> 0)
-typeMismatch.prestazione.golSegnati=Deve essere un intero (>= 0)
-typeMismatch.prestazione.assist=Deve essere un intero (>= 0)
-typeMismatch.prestazione.ammonizioni=DDeve essere un intero (>= 0)
-typeMismatch.prestazione.espulsione=Deve essere un intero (>= 0)
-typeMismatch.prestazione.portaInviolata=Deve essere un intero (>= 0)
+NotNull.prestazione.minutiGiocati=I minuti giocati sono un campo obbligatorio
+NotNull.prestazione.golSegnati=I gol segnati sono un campo obbligatorio
+NotNull.prestazione.assist=Gli assist sono un campo obbligatorio
+NotNull.prestazione.ammonizioni=Le ammonizioni sono un campo obbligatorio
+NotNull.prestazione.espulsione=L'espulsione è un campo obbligatorio
+NotNull.prestazione.portaInviolata=La porta inviolata è un campo obbligatorio
 prestazione.duplicato=Questa Prestazione esiste già nel Database
