Update: completamento degli Errori per Inserimento di una Prestazione

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -26,4 +26,12 @@ NotNull.prestazione.assist=Gli assist sono un campo obbligatorio
 NotNull.prestazione.ammonizioni=Le ammonizioni sono un campo obbligatorio
 NotNull.prestazione.espulsione=L'espulsione è un campo obbligatorio
 NotNull.prestazione.portaInviolata=La porta inviolata è un campo obbligatorio
+typeMismatch.prestazione.data=Deve essere una stringa
+typeMismatch.prestazione.squadraAvversaria=Deve essere una Squadra
+typeMismatch.prestazione.minutiGiocati=Deve essere un intero (> 0)
+typeMismatch.prestazione.golSegnati=Deve essere un intero (>= 0)
+typeMismatch.prestazione.assist=Deve essere un intero (>= 0)
+typeMismatch.prestazione.ammonizioni=Deve essere un intero (>= 0)
+typeMismatch.prestazione.espulsione=Deve essere un intero (>= 0)
+typeMismatch.prestazione.portaInviolata=Deve essere un intero (>= 0)
 prestazione.duplicato=Questa Prestazione esiste già nel Database
