Update: gestione semplificata della Data di Prestazione

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -19,7 +19,7 @@ NotBlank.squadra.nome=Il Nome è un campo obbligatorio
 typeMismatch.squadra.nome=Deve essere una stringa
 squadra.duplicato=Questa Squadra esiste già nel Database
 #
-NotBlank.prestazione.data=La Data è un campo obbligatorio
+NotBlank.prestazione.dataInserita=La Data è un campo obbligatorio
 NotNull.prestazione.minutiGiocati=I minuti giocati sono un campo obbligatorio
 NotNull.prestazione.golSegnati=I gol segnati sono un campo obbligatorio
 NotNull.prestazione.assist=Gli assist sono un campo obbligatorio
